# Smart-Contract-For-Uploading

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
resources/uploads/: TO_V-ing.txt
src/: lib.rs
src/application/repository/: internal_certificate.rs  internal_course.rs  internal_skill.rs  mod.rs
src/application/service/: impl_certificate.rs  impl_course.rs  impl_skill.rs  impl_user.rs  mod.rs
src/backend/: .env  main.js  near-middlewares.js  package-lock.json  package.json
src/frontend/views/: index.ejs
src/models/: certificate.rs  contract.rs  contract.rs:Zone.Identifier  course.rs  mod.rs  skill.rs  user.rs
